Fix blurry settings on Chrome mobile

--- a/src/styles/_responsive.scss
+++ b/src/styles/_responsive.scss
@@ -59,8 +59,7 @@
 		width: 100%;
 		font-size: 1.2em;
 		padding: 0px;
-		border-top-left-radius: 1em;
-		border-top-right-radius: 1em;
+		border-radius: 1em;
 		-webkit-overflow-scrolling: touch;
 
 		&.shown {
